changed the help page

--- a/ZBarSDK/Resources/zbar-help.html
+++ b/ZBarSDK/Resources/zbar-help.html
@@ -7,9 +7,9 @@ All Rights Reserved
 -->
 <html>
 <head>
-<title>Barcode Reader Help</title>
+<title>ScanItOn Help</title>
 <style type="text/css">
-html, body { margin: 0; padding: 0; background: black; color: white; font-family: sans-serif; font-size: 16px }
+html, body { margin: 0; padding: 0; background: gray; color: white; font-family: sans-serif; font-size: 16px }
 h1 { margin: .5em 0; text-align: center; font-size: 28px }
 h2 { font-size: 24px }
 hr { margin: 1em 0; height: 0; border: none; border-top: solid 1px #666 }
@@ -30,48 +30,46 @@ div.col { width: 50% }
 </style>
 </head>
 <body>
-<h1 id="title" style="color: #f88">Barcode Reader Help</h1>
+<h1 id="title" style="color: #f88">ScanItOn Help</h1>
 <hr/>
-<p class="title">Recognized barcodes should look like</p>
-<div class="col left">
+<p class="title">Recognized QR should look like</p>
+<!--<div class="col left">
 <a class="sample" style="width: 118px; background-position: -96px" href="http://wikipedia.org/wiki/EAN-13"></a>
 <p class="cen"><a href="http://wikipedia.org/wiki/EAN-13">EAN/UPC<br/>Product Codes</a></p>
 </div>
 <div class="col right">
 <a class="sample" style="width: 96px" href="http://wikipedia.org/wiki/QR_Code"></a>
 <p class="cen"><a href="http://wikipedia.org/wiki/QR_Code">QR Codes</a></p>
-</div>
-<p class="clear cen smaller">Also recognized, but not shown:
-<a href="http://wikipedia.org/wiki/Code_128">Code 128</a>,
-<a href="http://wikipedia.org/wiki/DataBar">DataBar (RSS)</a>,
-<a href="http://en.wikipedia.org/wiki/Code_93">Code 93</a>,
-<a href="http://wikipedia.org/wiki/Code_39">Code 39</a> and
-<a href="http://wikipedia.org/wiki/Interleaved_2_of_5">Interleaved 2 of 5</a></p>
+</div>-->
+<a class="sample" style="width: 96px" href="http://wikipedia.org/wiki/QR_Code"></a>
+
+
+
 <hr/>
 <p class="clear title">Hints for successful scanning</p>
 <div class="iconlist">
 <div class="icon left"></div>
 <p>Ensure there is plenty of</p>
-<h2 style="color: #ff4">Light</h2>
+<h2 style="color: black">Light</h2>
 </div>
 <div class="iconlist">
 <div class="icon left" style="background: none; color: #2d4">4"</div>
-<h2 style="color: #4f6">Distance</h2>
+<h2 style="color: black">Distance</h2>
 <p>should be about 3 to 5 inches</p>
 </div>
 <div class="iconlist">
 <div class="icon left" style="background-position: 0 -64px"></div>
-<h2 style="color: #3ee">Shake</h2>
+<h2 style="color: black">Shake</h2>
 <p>to force the camera to focus</p>
 </div>
 <div class="iconlist">
 <div class="icon left" style="background-position: 0 -128px"></div>
-<h2 style="color: #59f">Wait</h2>
+<h2 style="color: black">Wait</h2>
 <p>for the autofocus to finish</p>
 </div>
 <div class="iconlist">
 <div class="icon left" style="background-position: 0 -192px"></div>
-<h2 style="color: #d5f">Hold Still</h2>
+<h2 style="color:  black">Hold Still</h2>
 <p>while the barcode is scanned</p>
 </div>
 <script type="text/javascript">
